# roselito_simulation

./: .gitmodules  README.md
maps/: map_willow_garage-2025-02-01_01.data  map_willow_garage-2025-02-01_01.pgm  map_willow_garage-2025-02-01_01.yaml  willow-garage.data  willow-garage.pgm  willow-garage.yaml
routes/: minha_rota.pon  rota_teste.pon
src/roselito_agent/: CMakeLists.txt  README.md  package.xml
src/roselito_agent/launch/: pop_waypoint.launch  push_waypoint.launch  replay_route.launch  save_route.launch  teach_route.launch
src/roselito_agent/roselito_agent/: __init__.py  get_robot_pose.py
